--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Natural history -- Outdoor books'
+- GITenberg
 title: The Spring of the Year
 url: http://www.gutenberg.org/ebooks/42144
